--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -142,39 +142,41 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="Script\Aru2.h" />
-    <ClInclude Include="Script\Example\ScriptExample.h" />
-    <ClInclude Include="Script\CameraController.h" />
-    <ClInclude Include="Script\BackGroundImage.h" />
-    <ClInclude Include="Script\BackGroundVideo.h" />
-    <ClInclude Include="Script\Aru.h" />
-    <ClInclude Include="Script\Moon.h" />
-    <ClInclude Include="Script\Earth.h" />
+    <ClInclude Include="Scripts\Animation.h" />
+    <ClInclude Include="Scripts\Aru2.h" />
+    <ClInclude Include="Scripts\Example\ScriptExample.h" />
+    <ClInclude Include="Scripts\CameraController.h" />
+    <ClInclude Include="Scripts\BackGroundImage.h" />
+    <ClInclude Include="Scripts\BackGroundVideo.h" />
+    <ClInclude Include="Scripts\Aru.h" />
+    <ClInclude Include="Scripts\Moon.h" />
+    <ClInclude Include="Scripts\Earth.h" />
     <ClInclude Include="Scene\DemoScene2.h" />
     <ClInclude Include="Scene\DemoScene.h" />
     <ClInclude Include="DemoGameApp.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="Resource.h" />
+    <ClInclude Include="Scripts\Sun.h" />
     <ClInclude Include="stdafx.h" />
-    <ClInclude Include="Script\Sun.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="Script\YuukaVideo.h" />
+    <ClInclude Include="Scripts\YuukaVideo.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Script\Aru2.cpp" />
-    <ClCompile Include="Script\Example\ScriptExample.cpp" />
-    <ClCompile Include="Script\CameraController.cpp" />
-    <ClCompile Include="Script\BackGroundImage.cpp" />
-    <ClCompile Include="Script\BackGroundVideo.cpp" />
-    <ClCompile Include="Script\Aru.cpp" />
-    <ClCompile Include="Script\Moon.cpp" />
-    <ClCompile Include="Script\Earth.cpp" />
+    <ClCompile Include="Scripts\Animation.cpp" />
+    <ClCompile Include="Scripts\Aru2.cpp" />
+    <ClCompile Include="Scripts\Example\ScriptExample.cpp" />
+    <ClCompile Include="Scripts\CameraController.cpp" />
+    <ClCompile Include="Scripts\BackGroundImage.cpp" />
+    <ClCompile Include="Scripts\BackGroundVideo.cpp" />
+    <ClCompile Include="Scripts\Aru.cpp" />
+    <ClCompile Include="Scripts\Moon.cpp" />
+    <ClCompile Include="Scripts\Earth.cpp" />
     <ClCompile Include="Scene\DemoScene2.cpp" />
     <ClCompile Include="Scene\DemoScene.cpp" />
     <ClCompile Include="DemoGameApp.cpp" />
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="Script\Sun.cpp" />
-    <ClCompile Include="Script\YuukaVideo.cpp" />
+    <ClCompile Include="Scripts\Sun.cpp" />
+    <ClCompile Include="Scripts\YuukaVideo.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.vcxproj">
