--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -142,9 +142,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Scripts\Enemy.h" />
+    <ClInclude Include="Scene\DemoScene3.h" />
     <ClInclude Include="FSMState\AttackState.h" />
     <ClInclude Include="FSMState\IdleState.h" />
-    <ClInclude Include="Scripts\Animation.h" />
+    <ClInclude Include="Scripts\Player.h" />
     <ClInclude Include="Scripts\Aru2.h" />
     <ClInclude Include="Scripts\Example\ScriptExample.h" />
     <ClInclude Include="Scripts\CameraController.h" />
@@ -164,9 +166,11 @@
     <ClInclude Include="Scripts\YuukaVideo.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Scripts\Enemy.cpp" />
+    <ClCompile Include="Scene\DemoScene3.cpp" />
     <ClCompile Include="FSMState\AttackState.cpp" />
     <ClCompile Include="FSMState\IdleState.cpp" />
-    <ClCompile Include="Scripts\Animation.cpp" />
+    <ClCompile Include="Scripts\Player.cpp" />
     <ClCompile Include="Scripts\Aru2.cpp" />
     <ClCompile Include="Scripts\Example\ScriptExample.cpp" />
     <ClCompile Include="Scripts\CameraController.cpp" />
