--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
@@ -142,6 +142,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Animation\PlayerAnimatorInstance.h" />
+    <ClInclude Include="Animation\AttackState.h" />
+    <ClInclude Include="Animation\IdleState.h" />
+    <ClInclude Include="FSMState\AnimatorInstance.h" />
     <ClInclude Include="Scripts\Enemy.h" />
     <ClInclude Include="Scene\DemoScene3.h" />
     <ClInclude Include="FSMState\AttackState.h" />
@@ -166,6 +170,10 @@
     <ClInclude Include="Scripts\YuukaVideo.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Animation\PlayerAnimatorInstance.cpp" />
+    <ClCompile Include="Animation\AttackState.cpp" />
+    <ClCompile Include="Animation\IdleState.cpp" />
+    <ClCompile Include="FSMState\AnimatorInstance.cpp" />
     <ClCompile Include="Scripts\Enemy.cpp" />
     <ClCompile Include="Scene\DemoScene3.cpp" />
     <ClCompile Include="FSMState\AttackState.cpp" />
