--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -143,6 +143,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Animation\PlayerAnimatorInstance.h" />
+    <ClInclude Include="Animation\EnemyAnimatorInstance.h" />
     <ClInclude Include="Scripts\Enemy.h" />
     <ClInclude Include="Scene\DemoScene3.h" />
     <ClInclude Include="Scripts\Player.h" />
@@ -166,6 +167,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Animation\PlayerAnimatorInstance.cpp" />
+    <ClCompile Include="Animation\EnemyAnimatorInstance.cpp" />
     <ClCompile Include="Scripts\Enemy.cpp" />
     <ClCompile Include="Scene\DemoScene3.cpp" />
     <ClCompile Include="Scripts\Player.cpp" />
