--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -85,6 +85,9 @@
     <ClInclude Include="Animation\PlayerAnimatorInstance.h">
       <Filter>Animation</Filter>
     </ClInclude>
+    <ClInclude Include="Animation\EnemyAnimatorInstance.h">
+      <Filter>Animation</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -139,6 +142,9 @@
       <Filter>Scene</Filter>
     </ClCompile>
     <ClCompile Include="Animation\PlayerAnimatorInstance.cpp">
+      <Filter>Animation</Filter>
+    </ClCompile>
+    <ClCompile Include="Animation\EnemyAnimatorInstance.cpp">
       <Filter>Animation</Filter>
     </ClCompile>
   </ItemGroup>
