--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -141,6 +141,9 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Component\Collider.h" />
+    <ClInclude Include="Experimental\Physics\Collision\CollisionDetector.h" />
+    <ClInclude Include="Experimental\Physics\AABB.h" />
     <ClInclude Include="Animation\AnimationController.h" />
     <ClInclude Include="Animation\AnimatorInstance.h" />
     <ClInclude Include="Component\Animator.h" />
@@ -164,6 +167,7 @@
     <ClInclude Include="Component\StatComponent.h" />
     <ClInclude Include="Core\StatTraits.h" />
     <ClInclude Include="Manager\PackageResourceManager.h" />
+    <ClInclude Include="System\PhysicsSystem.h" />
     <ClInclude Include="System\InputSystem.h" />
     <ClInclude Include="System\ScriptSystem.h" />
     <ClInclude Include="System\RenderSystem.h" />
@@ -190,6 +194,9 @@
     <ClInclude Include="Object\UObjectBase.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Component\Collider.cpp" />
+    <ClCompile Include="Experimental\Physics\Collision\CollisionDetector.cpp" />
+    <ClCompile Include="Experimental\Physics\AABB.cpp" />
     <ClCompile Include="Animation\AnimationController.cpp" />
     <ClCompile Include="Animation\AnimatorInstance.cpp" />
     <ClCompile Include="Component\Animator.cpp" />
@@ -212,6 +219,7 @@
     <ClCompile Include="Component\StatComponent.cpp" />
     <ClCompile Include="Core\StatTraits.cpp" />
     <ClCompile Include="Manager\PackageResourceManager.cpp" />
+    <ClCompile Include="System\PhysicsSystem.cpp" />
     <ClCompile Include="System\InputSystem.cpp" />
     <ClCompile Include="System\ScriptSystem.cpp" />
     <ClCompile Include="System\RenderSystem.cpp" />
