--- a/D2D-AliceEngine/Engine/Engine.vcxproj.filters
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj.filters
@@ -201,7 +201,9 @@
     <ClInclude Include="Experimental\Physics\Collision\CollisionDetector.h">
       <Filter>Experimental\Physics\Collission</Filter>
     </ClInclude>
-    <ClInclude Include="Component\Collider.h" />
+    <ClInclude Include="Component\Collider.h">
+      <Filter>Component</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Component\VideoComponent.cpp">
@@ -351,6 +353,8 @@
     <ClCompile Include="Experimental\Physics\Collision\CollisionDetector.cpp">
       <Filter>Experimental\Physics\Collission</Filter>
     </ClCompile>
-    <ClCompile Include="Component\Collider.cpp" />
+    <ClCompile Include="Component\Collider.cpp">
+      <Filter>Component</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
