--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -147,6 +147,8 @@
     <ClCompile Include="Animation\EnemyAnimatorInstance.cpp">
       <Filter>Animation</Filter>
     </ClCompile>
-    <ClCompile Include="d2dengine_pch.cpp" />
+    <ClCompile Include="d2dengine_pch.cpp">
+      <Filter>PreCompiledHeader</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
