--- a/D2D-AliceEngine/Engine/Engine.vcxproj
+++ b/D2D-AliceEngine/Engine/Engine.vcxproj
@@ -168,7 +168,7 @@
     <ClInclude Include="Component\StatComponent.h" />
     <ClInclude Include="Core\StatTraits.h" />
     <ClInclude Include="Manager\PackageResourceManager.h" />
-    <ClInclude Include="System\PhysicsSystem.h" />
+    <ClInclude Include="System\CollisionSystem.h" />
     <ClInclude Include="System\InputSystem.h" />
     <ClInclude Include="System\ScriptSystem.h" />
     <ClInclude Include="System\RenderSystem.h" />
@@ -221,7 +221,7 @@
     <ClCompile Include="Component\StatComponent.cpp" />
     <ClCompile Include="Core\StatTraits.cpp" />
     <ClCompile Include="Manager\PackageResourceManager.cpp" />
-    <ClCompile Include="System\PhysicsSystem.cpp" />
+    <ClCompile Include="System\CollisionSystem.cpp" />
     <ClCompile Include="System\InputSystem.cpp" />
     <ClCompile Include="System\ScriptSystem.cpp" />
     <ClCompile Include="System\RenderSystem.cpp" />
