--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -146,6 +146,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="DemoScene4.h" />
+    <ClInclude Include="Scene\DemoScene4.h" />
     <ClInclude Include="Scripts\Enemy.h" />
     <ClInclude Include="Scene\DemoScene3.h" />
     <ClInclude Include="Scripts\Player.h" />
@@ -172,6 +174,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="DemoScene4.cpp" />
+    <ClCompile Include="Scene\DemoScene4.cpp" />
     <ClCompile Include="Scripts\Enemy.cpp" />
     <ClCompile Include="Scene\DemoScene3.cpp" />
     <ClCompile Include="Scripts\Player.cpp" />
