[feat] UIManager - UIImage 구현중
현재 UIImage 코드를 구현하고 있는데 이미지가 안뜸. 재확인 예정

--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj.filters
@@ -94,6 +94,9 @@
     <ClInclude Include="Scene\ExampleScene\ExampleScene.h">
       <Filter>Scene\ExampleScene</Filter>
     </ClInclude>
+    <ClInclude Include="Scripts\UI_Image.h">
+      <Filter>PreCompiledHeader</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DemoGameApp.cpp">
@@ -159,5 +162,6 @@
     <ClCompile Include="Scene\ExampleScene\ExampleScene.cpp">
       <Filter>Scene\ExampleScene</Filter>
     </ClCompile>
+    <ClCompile Include="Scripts\UI_Image.cpp" />
   </ItemGroup>
 </Project>
