--- a/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
+++ b/D2D-AliceEngine/D2D-AliceEngine/D2D-AliceEngine.vcxproj
@@ -185,6 +185,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClInclude Include="d2dengine_pch.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Scripts\YuukaVideo.h" />
+    <ClInclude Include="Scripts\UI_Image.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Scripts\Audio.cpp" />
@@ -211,6 +212,7 @@ copy /Y "$(SolutionDir)Extension\core\lib\x64\fmod_vc.lib" "$(OutDir)"</Command>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Scripts\Sun.cpp" />
     <ClCompile Include="Scripts\YuukaVideo.cpp" />
+    <ClCompile Include="Scripts\UI_Image.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Engine\Engine.vcxproj">
